Downgraded from JDK 15 to JDK 11.
Also some additional timing reporting for DTO to provider load.